--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -177,7 +177,7 @@
         <li>
             The launcher doesn't work, I've tried everything
             <p>
-                You technically don't need the launcher. Download the multi-thread patched version of the executable, and put it in <code>game installation folder/bin</code> folder. You can access this folder through Steam (right click on the game in the list - Properties - Local Files - Browse Local Files).
+                You technically don't need the launcher. Download the multi-thread patched version of the executable, and put it in <code>game installation folder/bin</code> folder. You can access this folder through Steam (right click on the game in the list - Properties - Local Files - Browse Local Files). You can then start the game with Game_Emulator.exe.
             </p>
         </li>
     </ul>
