--- a/projects/QMK/SongWriter/index.html
+++ b/projects/QMK/SongWriter/index.html
@@ -1,5 +1,11 @@
 <html>
-<meta charset="utf-8">
+<meta name="title" content="QMK user_song.h Generator">
+<meta name="description" content="Use this site to compose songs for your keebs!">
+<meta name="keywords" content="QMK, music, software, keyboard">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="author" content="Blackbeard Softworks">
 <head>
 <title>QMK Sound Writer</title>
 <style>
