--- a/projects/QMK/SongWriter/index.html
+++ b/projects/QMK/SongWriter/index.html
@@ -1,5 +1,5 @@
 <html>
-<meta name="title" content="QMK user_song.h Generator">
+<meta name="title" content="QMK user_song_list.h Generator">
 <meta name="description" content="Use this site to compose songs for your keebs!">
 <meta name="keywords" content="QMK, music, software, keyboard">
 <meta name="robots" content="index, follow">
