--- a/ascender/readme/index.html
+++ b/ascender/readme/index.html
@@ -71,6 +71,26 @@
         <emp>The NEW and IMPROVED launcher</emp> should do it automatically for you, which you can get through our Discord server: <a href="https://discord.gg/PpgHEB8">Discord server</a> (<a href="https://github.com/UnforeseenOcean/UnforeseenOcean.github.io/raw/master/ascender/readme/Ascender_Launcher_Lite_20200609.zip">mirror link, may not be up to date</a>)
     </p>
     <p>
+        Here's how to use the launcher.
+    </p>
+    <ul>
+        <li>
+            Download the launcher from our server, or the mirror link.
+        </li>
+        <li>
+            Unzip the <emp>ENTIRE ARCHIVE</emp> to a folder on your desktop. The name can be anything as long as it's in English.
+        </li>
+        <li>
+            Start the launcher by clicking on Ascender_Installer.exe. <emp>This is the file you will use to play the game later.</emp>
+        </li>
+        <li>
+            The launcher should start and prepare the game for running. <emp>Steam must be running and logged in.</emp>
+        </li>
+        <li>
+            Enjoy! If you have trouble starting and playing the game, read the troubleshooting guide below.
+        </li>
+    </ul>
+    <p>
         Should the launcher not install the game for you, click on the link to start the game on Steam:
         <a href="steam://install/233630">Install Ascend: Hand of Kul on Steam</a>
     </p>
