Update project page

--- a/projects/unimpressive-videos/about.html
+++ b/projects/unimpressive-videos/about.html
@@ -46,15 +46,12 @@
             <section class="hero text-center">
                 <div class="container-sm text-large">
                     <div class="hero-inner paragraph-md">
-                        <h1 class="hero-title h2-mobile mt-0 is-revealing">About Unimpressive Videos</h1>
-                        <p class="hero-paragraph is-revealing">It is a channel dedicated to uploading videos that don't fit well in the world of perfectionism -- the uploader is trying his best, but his best simply isn't enough to satisfy the crowd. </p>
-						<p class="hero-paragraph is-revealing">It started one day in 2022, when I realized that I won't ever be good enough to reach the heights others are reaching. Rather than just giving up and dragging the recording to the recycling bin, I decided to make a new channel and upload some failures that most people won't see.</p>
-						<p class="hero-paragraph is-revealing">The channel was created with hopes of telling the beginners and others that everyone's imperfect and striving towards the ideal state simply leads to depression and agony. </p>
-						<p class="hero-paragraph is-revealing">It was also created to say that people like me exist and that everyone starts somewhere.</p>
-						<p class="hero-paragraph is-revealing">If you are currently thinking that you won't ever achieve the goal you've set, I hope my videos prove you wrong.</p>
-						<p class="hero-paragraph is-revealing">Keep going, and aim just a bit higher than where you are right now, not at the top goal.</p>
-						<p class="hero-paragraph is-revealing">And by the time you look back, you would've reached the goal you've always wished for.</p>
-                                <a class="button button-primary button-block button-shadow" href="https://www.youtube.com/channel/UC-NI0_KgpUr0hgbKYMvkrgg">Visit our channel</a>
+                        <h1 class="hero-title h2-mobile mt-0 is-revealing">About Blackbeard</h1>
+                        <p class="hero-paragraph is-revealing">Blackbeard is a personal brand of mine, specializing in content creation and electronics. </p>
+						<p class="hero-paragraph is-revealing">The logo depicts a rather bummed out dwarf with a black beard.</p>
+						<p class="hero-paragraph is-revealing">The logo was created back in 2018 by a talented artist, Tran (Also known as Nyaar.) </p>
+						<p class="hero-paragraph is-revealing">Currently the projects are hosted on <a href="https://github.com/TorbysWorkshop">Torby's Workshop</a>.</p>
+						<p class="hero-paragraph is-revealing">I am still not very good at what I do, but I always strive to do better.</p>
                     </div>
                 </div>
             </section>
