Fix init issues
Fixed an issue where when none of the Raids are selected and has never been selected after refreshing the page, the playlist generation fails.

--- a/ragnachooser/index.html
+++ b/ragnachooser/index.html
@@ -337,6 +337,7 @@
 		  return arr.every(element => element === false);
 		}
 		function makePlaylist(){
+			updateConfig();
 			updateCount();
 			var ii = [includeVol1, includeVol2, includeGH, includeHF, includeNB];
 			var intermediatePL = [];
